--- a/index.html
+++ b/index.html
@@ -47,9 +47,15 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
+          <a href="#" target="_blank">Fiona Klimecki</a> and is
           <a href="#" target="_blank"> on GitHub</a> and
           <a href="#" target="_blank">hosted on Netlify</a>
+        </p>
+        <p>
+          You can check out my 
+          <a href="https://github.com/FiKli-ctrl" target="_blank">GitHub profile, </a>        
+          <a href="https://github.com/FiKli-ctrl/shecodes-homework-week6" target="_blank">GitHub repository and </a>      
+          <a href="https://app.netlify.com/teams/fikli-ctrl-cgxu4xs/sites" target="_blank">Netflify URL</a>       
         </p>
       </footer>
     </div>
