--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         </p>
         <p>
           You can check out my 
-          <a href="https://github.com/FiKli-ctrl" target="_blank">GitHub profile, </a>        
-          <a href="https://github.com/FiKli-ctrl/shecodes-homework-week6" target="_blank">GitHub repository and </a>      
-          <a href="https://app.netlify.com/teams/fikli-ctrl-cgxu4xs/sites" target="_blank">Netflify URL</a>       
+          <a href="https://github.com/FiKli-ctrl" target="_blank">GitHub profile</a>,        
+          <a href="https://github.com/FiKli-ctrl/shecodes-homework-week6" target="_blank">GitHub repository</a> and     
+          <a href="https://app.netlify.com/teams/fikli-ctrl-cgxu4xs/sites" target="_blank">Netlify URL</a>       
         </p>
       </footer>
     </div>
